--- a/css/index.css
+++ b/css/index.css
@@ -66,3 +66,10 @@ body {
     display: block;
     margin-top: 1em;
 }
+
+.truncate {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
