Changed menu links to p incased.

--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,12 @@ body {
 
 .menu > a {
     margin-right: 1em;
+    display: inline-block;
+}
+
+.menu > p {
+    color: #222;
+    display: inline-block;
 }
 
 .container {
