--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,18 @@ a:visited {
     color: #222;
 }
 
+.hover {
+    text-decoration: none;
+}
+
+.hover:hover {
+    text-decoration: underline;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -100,7 +112,6 @@ body {
     width: 100%;
     text-align: center;
     display: block;
-    cursor: pointer;
     margin-bottom: 1.5em;
 }
 
@@ -109,4 +120,9 @@ body {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.dark-mode {
+    background-color: #222;
+    color: white !important;
 }
