New theme testing

--- a/css/index.css
+++ b/css/index.css
@@ -2,127 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
-a {
-    text-decoration: none;
-    color: rgb(61, 146, 201);
+.grow {
+    transition: all .1s ease-in-out;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
-a:visited {
-    color: #222;
-}
-
-.hover {
-    text-decoration: none;
-}
-
-.hover:hover {
-    text-decoration: underline;
-}
-
-.pointer {
-    cursor: pointer;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-}
-
-.menu>a {
-    color: #222;
-    margin-right: 1em;
-    display: inline-block;
-}
-
-.menu>p {
-    color: #222;
-    display: inline-block;
-}
-
-.container {
-    margin: auto;
-    width: 90%;
-}
-
-.article {
-    margin-bottom: 4.5em;
-}
-
-.article-header>a {
-    color: #222;
-}
-
-.article-title {
-    font-size: 2em;
-    color: #222;
-    margin-bottom: 0.2em;
-}
-
-.article-title-link {
-    color: #222;
-}
-
-.article-subtitle {
-    color: #999;
-    font-size: 90%;
-    margin-top: 0em;
-}
-
-.article-date {
-    color: rgb(61, 146, 201);
-}
-
-.article-subtitle>.article-category {
-    background: #8156a7;
-    /* Set font size as a percentage relative to the
-    parent's font size. */
-    font-size: 80%;
-    /* Padding vertical and horizontal. */
-    padding: 0.3em 1em;
-    color: #fff;
-}
-
-.article-body {
-    color: #444;
-    /* Set the distance between the lines of text. */
-    line-height: 1.8em;
-}
-
-.article-body>img {
-    /* Restrict the max width of the parent block.
-    Makes sure the image does not exceed the width of the parent block. */
-    max-width: 100%;
-    /* Determine the height based off parent block. */
-    height: auto;
-    /* Display on a new line. */
-    display: block;
-    margin-top: 1em;
-}
-
-.archive-date {
-    font-size: 3em;
-    color: #222;
-    margin-bottom: 0.2em;
-}
-
-#go-to-top {
-    width: 100%;
-    text-align: center;
-    display: block;
-    margin-bottom: 1.5em;
-}
-
-.truncate {
-    width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.dark-mode {
-    background-color: #222;
-    color: whitesmoke !important;
+.grow:hover {
+    transform: scale(1.01);
 }
