--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,24 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .grow {
-    transition: all .1s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .grow:hover {
-    transform: scale(1.01);
+  transform: scale(1.01);
 }
 
 .expand {
-    height: 100vh !important;
+  height: 100vh !important;
 }
 
 .footer {
-    padding: 3rem 1.5rem !important;
+  padding: 3rem 1.5rem !important;
+}
+
+.card-shadow-white {
+  box-shadow: 0 0.5em 1em -0.125em rgb(245 245 245 / 10%),
+    0 0 0 1px rgb(245 245 245 / 2%);
 }
